--- a/man/mb.1
+++ b/man/mb.1
@@ -76,7 +76,7 @@ The following global options can be used on any motherbrain command to change th
 .
 .TP
 \fB\-c\fR, \fB\-\-config\fR
-Path to a MotherBrain JSON configuration file\.
+Path to a motherbrain JSON configuration file\.
 .
 .TP
 \fB\-v\fR, \fB\-\-verbose\fR
